updated base template to include link for adding a report

--- a/wordnik/templates/base.html
+++ b/wordnik/templates/base.html
@@ -31,6 +31,7 @@
 								<li><a href="/source/add">Add a Source</a></li>
 								<li><a href="/segment/add">Add a Segment</a></li>
 								<li><a href="/metric/add">Add a Metric</a></li>
+								<li><a href="/report/add">Add a Report</a></li>
 							</ul>
 						</li>
 					{% endif %}
