updated style sheet

--- a/wordnik/market/static/css/main.css
+++ b/wordnik/market/static/css/main.css
@@ -100,6 +100,12 @@ div#coName {
 	padding-top:0px;
 }
 
+div.tileDiv {
+	float:left;
+	width:350px;
+	margin-right:10px;
+}
+
 /* Form Styles */
 
 
