changing logout link

--- a/wordnik/templates/base.html
+++ b/wordnik/templates/base.html
@@ -37,7 +37,7 @@
 					{% endif %}
 					
 					{% if user.is_authenticated %}
-						<li class="headerNavItem"><a class="headerLink" href="/accounts/logout/">Logout</a></li>
+						<li class="headerNavItem"><a class="headerLink" href="/logout/">Logout</a></li>
 					{% endif %}
 					</ul>
 					<select id="jumpToList">
