--- a/wordnik/market/static/css/main.css
+++ b/wordnik/market/static/css/main.css
@@ -321,6 +321,22 @@ a.alt {
 	color:#FF4D11;
 }
 
+a.tag {
+	color:#FF4D11;
+	padding: 2px 5px 2px 5px;
+	background-color: #000;
+	border-radius:3px;
+}
+
+a.tag:hover {
+	color:#000;
+	padding: 1px 5px 1px 5px;
+	/*margin: 5px 0 5px 0;*/
+	background-color: #FF4D11;
+	border-radius:3px;
+	text-decoration:none;
+}
+
 /*  Form styles */
 
 
@@ -392,6 +408,7 @@ div.descriptionPara {
 div.smallTagList {
 	/*display:inline;
 	margin-left:10px;*/
+	margin: 5px 0 5px 0;
 }
 
 p.noTopMargin {
