modifying design of tag detail page

--- a/wordnik/templates/market/tag/detail.html
+++ b/wordnik/templates/market/tag/detail.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block pagetitle %}
-	<div class="pageTitleBarDiv" id="coName">{{tag.name}}</div>
+	<div class="pageTitleBarDiv" id="coName">Tag: {{tag.name}}</div>
 	
 {% endblock %}
 
