--- a/wordnik/market/static/css/main.css
+++ b/wordnik/market/static/css/main.css
@@ -88,6 +88,12 @@ div#mainContent {
 	margin-right: 20px;
 }
 
+
+div#mainContentWide {
+	width:95%;
+	margin-right: 20px;
+}
+
 div.pageTitleBarDiv {
 	margin-right:25px;
 	float: left;
@@ -102,7 +108,7 @@ div#coName {
 
 div.tileDiv {
 	float:left;
-	width:275px;
+	width:325px;
 	margin-right:10px;
 	font-size:12px;
 }
