--- a/wordnik/market/static/css/main.css
+++ b/wordnik/market/static/css/main.css
@@ -465,7 +465,7 @@ li.sidebarListItem {
 	margin: 5px 0 5px 0;
 }
 
-p.note {
+p.note, span.note {
 	margin: 0;
 	font-size: 10pt;
 	font-weight: normal;
