--- a/wordnik/templates/base.html
+++ b/wordnik/templates/base.html
@@ -31,7 +31,7 @@
 								<li><a href="/source/add">Add a Source</a></li>
 								<li><a href="/segment/add">Add a Segment</a></li>
 								<li><a href="/metric/add">Add a Metric</a></li>
-								<li><a href="/report/add">Add an Analysis</a></li>
+								<li><a href="/analysis/addStream">Add an Analysis</a></li>
 							</ul>
 						</li>
 					{% endif %}
