fixing uploading of analysis with files

--- a/wordnik/templates/market/analysis/streamDetail.html
+++ b/wordnik/templates/market/analysis/streamDetail.html
@@ -15,6 +15,11 @@
 {% endblock %}
 
 {% block content %}
+	{{ stream.description|safe }}
+	
+	{% for a in stream.analysis_set.all %}
+		{{ a.title }}
+	{% endfor %}
 	
 	{% if stream.segments %}
 		<p class="pageSubHead">Market Segments</p>
