fixed external link to company's page

--- a/wordnik/templates/market/company/detail.html
+++ b/wordnik/templates/market/company/detail.html
@@ -261,7 +261,7 @@ View:
 	<option value="src">Sources</option>
 </select>
 <p>
-	<a target="_blank" href="{{ co.url }}">{{co.url}}</a>
+	<a target="_blank" href="/{{ co.url }}">{{co.url}}</a>
 </p>
 <div id="compdescr" class="compInfoDiv">
 	<p class="pageSubHead">Description</p>
